QtBeef/src/Qt/qtablewidget.bf

extension CQt
{
	[LinkName("QTableWidget_new")]
	public static extern QTableWidget_Ptr* QTableWidget_new(QWidget_Ptr* parent);
	[LinkName("QTableWidget_new2")]
	public static extern QTableWidget_Ptr* QTableWidget_new2();
	[LinkName("QTableWidget_new3")]
	public static extern QTableWidget_Ptr* QTableWidget_new3(c_int rows, c_int columns);
	[LinkName("QTableWidget_new4")]
	public static extern QTableWidget_Ptr* QTableWidget_new4(c_int rows, c_int columns, QWidget_Ptr* parent);
	[LinkName("QTableWidget_Delete")]
	public static extern void QTableWidget_Delete(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_MetaObject")]
	public static extern QMetaObject_Ptr* QTableWidget_MetaObject(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_Qt_Metacast")]
	public static extern void* QTableWidget_Qt_Metacast(QTableWidget_Ptr* self, c_char* param1);
	[LinkName("QTableWidget_Qt_Metacall")]
	public static extern c_int QTableWidget_Qt_Metacall(QTableWidget_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QTableWidget_Tr")]
	public static extern libqt_string QTableWidget_Tr(c_char* s);
	[LinkName("QTableWidget_SetRowCount")]
	public static extern void QTableWidget_SetRowCount(QTableWidget_Ptr* self, c_int rows);
	[LinkName("QTableWidget_RowCount")]
	public static extern c_int QTableWidget_RowCount(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_SetColumnCount")]
	public static extern void QTableWidget_SetColumnCount(QTableWidget_Ptr* self, c_int columns);
	[LinkName("QTableWidget_ColumnCount")]
	public static extern c_int QTableWidget_ColumnCount(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_Row")]
	public static extern c_int QTableWidget_Row(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_Column")]
	public static extern c_int QTableWidget_Column(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_Item")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_Item(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_SetItem")]
	public static extern void QTableWidget_SetItem(QTableWidget_Ptr* self, c_int row, c_int column, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_TakeItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_TakeItem(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_Items")]
	public static extern void* QTableWidget_Items(QTableWidget_Ptr* self, QMimeData_Ptr* data);
	[LinkName("QTableWidget_IndexFromItem")]
	public static extern QModelIndex_Ptr QTableWidget_IndexFromItem(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemFromIndex")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_ItemFromIndex(QTableWidget_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QTableWidget_VerticalHeaderItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_VerticalHeaderItem(QTableWidget_Ptr* self, c_int row);
	[LinkName("QTableWidget_SetVerticalHeaderItem")]
	public static extern void QTableWidget_SetVerticalHeaderItem(QTableWidget_Ptr* self, c_int row, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_TakeVerticalHeaderItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_TakeVerticalHeaderItem(QTableWidget_Ptr* self, c_int row);
	[LinkName("QTableWidget_HorizontalHeaderItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_HorizontalHeaderItem(QTableWidget_Ptr* self, c_int column);
	[LinkName("QTableWidget_SetHorizontalHeaderItem")]
	public static extern void QTableWidget_SetHorizontalHeaderItem(QTableWidget_Ptr* self, c_int column, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_TakeHorizontalHeaderItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_TakeHorizontalHeaderItem(QTableWidget_Ptr* self, c_int column);
	[LinkName("QTableWidget_SetVerticalHeaderLabels")]
	public static extern void QTableWidget_SetVerticalHeaderLabels(QTableWidget_Ptr* self, void** labels);
	[LinkName("QTableWidget_SetHorizontalHeaderLabels")]
	public static extern void QTableWidget_SetHorizontalHeaderLabels(QTableWidget_Ptr* self, void** labels);
	[LinkName("QTableWidget_CurrentRow")]
	public static extern c_int QTableWidget_CurrentRow(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_CurrentColumn")]
	public static extern c_int QTableWidget_CurrentColumn(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_CurrentItem")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_CurrentItem(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_SetCurrentItem")]
	public static extern void QTableWidget_SetCurrentItem(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_SetCurrentItem2")]
	public static extern void QTableWidget_SetCurrentItem2(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item, void* command);
	[LinkName("QTableWidget_SetCurrentCell")]
	public static extern void QTableWidget_SetCurrentCell(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_SetCurrentCell2")]
	public static extern void QTableWidget_SetCurrentCell2(QTableWidget_Ptr* self, c_int row, c_int column, void* command);
	[LinkName("QTableWidget_SortItems")]
	public static extern void QTableWidget_SortItems(QTableWidget_Ptr* self, c_int column);
	[LinkName("QTableWidget_SetSortingEnabled")]
	public static extern void QTableWidget_SetSortingEnabled(QTableWidget_Ptr* self, bool enable);
	[LinkName("QTableWidget_IsSortingEnabled")]
	public static extern bool QTableWidget_IsSortingEnabled(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_EditItem")]
	public static extern void QTableWidget_EditItem(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_OpenPersistentEditor")]
	public static extern void QTableWidget_OpenPersistentEditor(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ClosePersistentEditor")]
	public static extern void QTableWidget_ClosePersistentEditor(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_IsPersistentEditorOpen")]
	public static extern bool QTableWidget_IsPersistentEditorOpen(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_CellWidget")]
	public static extern QWidget_Ptr* QTableWidget_CellWidget(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_SetCellWidget")]
	public static extern void QTableWidget_SetCellWidget(QTableWidget_Ptr* self, c_int row, c_int column, QWidget_Ptr* widget);
	[LinkName("QTableWidget_RemoveCellWidget")]
	public static extern void QTableWidget_RemoveCellWidget(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_SetRangeSelected")]
	public static extern void QTableWidget_SetRangeSelected(QTableWidget_Ptr* self, QTableWidgetSelectionRange_Ptr* range, bool selectVal);
	[LinkName("QTableWidget_SelectedRanges")]
	public static extern void* QTableWidget_SelectedRanges(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_SelectedItems")]
	public static extern void* QTableWidget_SelectedItems(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_FindItems")]
	public static extern void* QTableWidget_FindItems(QTableWidget_Ptr* self, libqt_string* text, void* flags);
	[LinkName("QTableWidget_VisualRow")]
	public static extern c_int QTableWidget_VisualRow(QTableWidget_Ptr* self, c_int logicalRow);
	[LinkName("QTableWidget_VisualColumn")]
	public static extern c_int QTableWidget_VisualColumn(QTableWidget_Ptr* self, c_int logicalColumn);
	[LinkName("QTableWidget_ItemAt")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_ItemAt(QTableWidget_Ptr* self, QPoint_Ptr* p);
	[LinkName("QTableWidget_ItemAt2")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_ItemAt2(QTableWidget_Ptr* self, c_int x, c_int y);
	[LinkName("QTableWidget_VisualItemRect")]
	public static extern QRect_Ptr QTableWidget_VisualItemRect(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemPrototype")]
	public static extern QTableWidgetItem_Ptr* QTableWidget_ItemPrototype(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_SetItemPrototype")]
	public static extern void QTableWidget_SetItemPrototype(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ScrollToItem")]
	public static extern void QTableWidget_ScrollToItem(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_InsertRow")]
	public static extern void QTableWidget_InsertRow(QTableWidget_Ptr* self, c_int row);
	[LinkName("QTableWidget_InsertColumn")]
	public static extern void QTableWidget_InsertColumn(QTableWidget_Ptr* self, c_int column);
	[LinkName("QTableWidget_RemoveRow")]
	public static extern void QTableWidget_RemoveRow(QTableWidget_Ptr* self, c_int row);
	[LinkName("QTableWidget_RemoveColumn")]
	public static extern void QTableWidget_RemoveColumn(QTableWidget_Ptr* self, c_int column);
	[LinkName("QTableWidget_Clear")]
	public static extern void QTableWidget_Clear(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_ClearContents")]
	public static extern void QTableWidget_ClearContents(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_ItemPressed")]
	public static extern void QTableWidget_ItemPressed(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemClicked")]
	public static extern void QTableWidget_ItemClicked(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemDoubleClicked")]
	public static extern void QTableWidget_ItemDoubleClicked(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemActivated")]
	public static extern void QTableWidget_ItemActivated(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemEntered")]
	public static extern void QTableWidget_ItemEntered(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_ItemChanged")]
	public static extern void QTableWidget_ItemChanged(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item);
	[LinkName("QTableWidget_CurrentItemChanged")]
	public static extern void QTableWidget_CurrentItemChanged(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* current, QTableWidgetItem_Ptr* previous);
	[LinkName("QTableWidget_ItemSelectionChanged")]
	public static extern void QTableWidget_ItemSelectionChanged(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_CellPressed")]
	public static extern void QTableWidget_CellPressed(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CellClicked")]
	public static extern void QTableWidget_CellClicked(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CellDoubleClicked")]
	public static extern void QTableWidget_CellDoubleClicked(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CellActivated")]
	public static extern void QTableWidget_CellActivated(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CellEntered")]
	public static extern void QTableWidget_CellEntered(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CellChanged")]
	public static extern void QTableWidget_CellChanged(QTableWidget_Ptr* self, c_int row, c_int column);
	[LinkName("QTableWidget_CurrentCellChanged")]
	public static extern void QTableWidget_CurrentCellChanged(QTableWidget_Ptr* self, c_int currentRow, c_int currentColumn, c_int previousRow, c_int previousColumn);
	[LinkName("QTableWidget_Event")]
	public static extern bool QTableWidget_Event(QTableWidget_Ptr* self, QEvent_Ptr* e);
	[LinkName("QTableWidget_MimeTypes")]
	public static extern void* QTableWidget_MimeTypes(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_MimeData")]
	public static extern QMimeData_Ptr* QTableWidget_MimeData(QTableWidget_Ptr* self, void** items);
	[LinkName("QTableWidget_DropMimeData")]
	public static extern bool QTableWidget_DropMimeData(QTableWidget_Ptr* self, c_int row, c_int column, QMimeData_Ptr* data, Qt_DropAction action);
